worked on tutorials rendering

--- a/lessons/tutorials/p2p.mdx
+++ b/lessons/tutorials/p2p.mdx
@@ -3,10 +3,12 @@ i18n: 'p2p'
 title: Introduction to Peer-to-Peer (P2P) Networks
 description: Introduction to what P2P Networks are?.
 icons: []
+tags: ['Consensus Mechanism', 'Blockchain', 'Tutorial' ]
+date: '28th June, 2022'
 author: ['Gospel Chinyereugo']
 ---
 
-# Peer-to-Peer (P2P) Networks
+## Peer-to-Peer (P2P) Networks
 
 In this article we will talk about what P2P networks are and why they exist.
 
