worked on tutorials rendering

--- a/lessons/tutorials/wallets.mdx
+++ b/lessons/tutorials/wallets.mdx
@@ -3,6 +3,7 @@ i18n: 'wallets'
 title: Introduction to web3 wallets
 description: Overview of wallet use cases and setting up environment.
 icons: []
+tags: ['Wallets', 'Web3', 'Keys' ]
 author: ['piablo', 'Meowy']
 ---
 
