--- a/lessons/tutorials/speedway_cli_overview.mdx
+++ b/lessons/tutorials/speedway_cli_overview.mdx
@@ -3,7 +3,7 @@ i18n: 'p2p'
 title: An In-Depth Overview of the Speedway CLI
 description: Learn the basics of using a console/terminal/shell for Ubuntu, Mac and Windows WSL.
 icons: []
-tags: ['speedway', 'speedway-cli', sonr' ]
+tags: ['speedway', 'speedway-cli', 'sonr' ]
 date: 'September 11, 2022'
 authors: ['Ian Perez']
 ---
