removed author initials icon, fix tutorial date

--- a/lessons/tutorials/speedway_cli_overview.mdx
+++ b/lessons/tutorials/speedway_cli_overview.mdx
@@ -5,7 +5,7 @@ description: Learn the basics of using a console/terminal/shell for Ubuntu, Mac 
 icons: []
 thumb: '/assets/lessons/speedway_cli_overview/speedway_cli.png'
 tags: ['speedway', 'speedway-cli', 'sonr' ]
-date: 'September 11, 2022'
+date: '11th September, 2022'
 authors: ['Ian Perez']
 ---
 
